Adicionar e Buscar funcionando

--- a/TaskClient/adicionarTarefa.html
+++ b/TaskClient/adicionarTarefa.html
@@ -59,7 +59,7 @@
                       <div class="col-md-12">
                           <form ng-submit="salvarTarefa()">
                               <div class="form-group col-lg-8">
-                                  Titulo:<input class="form-control" ng-model="titulo"/>
+                                  Titulo:<input class="form-control" ng-model="nomeTarefa"/>
                               </div>
                               <div class="form-group col-lg-2">
                                   Prazo:<input class="form-control" type="date" ng-model="prazo" value="2014-02-09">
