--- a/TaskClient/adicionarTarefa.html
+++ b/TaskClient/adicionarTarefa.html
@@ -4,8 +4,12 @@
     <title>Adicionar Tarefa</title>
     <!-- angular js -->
     <script src="js/angular/angular.min.js"></script>
+    <!-- jquery -->
+    <script src="css/jquery-3.2.1.min.js"></script>
+    
     <!-- controller -->
     <script src="js/controllers/tarefas.js"></script>
+    
     <!--bootstrap -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
@@ -59,7 +63,7 @@
                       <div class="col-md-12">
                           <form ng-submit="salvarTarefa()">
                               <div class="form-group col-lg-8">
-                                  Titulo:<input class="form-control" ng-model="nomeTarefa"/>
+                                  Titulo:<input class="form-control" ng-model="titulo"/>
                               </div>
                               <div class="form-group col-lg-2">
                                   Prazo:<input class="form-control" type="date" ng-model="prazo" value="2014-02-09">
