--- a/TaskClient/inicio.html
+++ b/TaskClient/inicio.html
@@ -6,23 +6,18 @@
     <script src="js/angular/angular.min.js"></script>
     <!-- jquery -->
     <script src="css/jquery-3.2.1.min.js"></script>
-    
     <!-- controller -->
     <script src="js/controllers/tarefas.js"></script>
-    
     <!--bootstrap -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" 
     integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 </head>
 
 <body ng-app="myAppA" ng-controller="ctrlTarefas" class="container-fluid ">
@@ -30,12 +25,6 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar">a</span>
-                <span class="icon-bar">b</span>
-                <span class="icon-bar">c</span>
-              </button>
               <a class="navbar-brand" href="#">Task Manager</a>
             </div>
           </div>
@@ -70,37 +59,34 @@
               <div class="input-group">
                   <span class="input-group-btn">
                     <button class="btn btn-default" ng-click="listarTodas()">
-                      <span class="glyphicon glyphicon-list">
+                      <span class="glyphicon glyphicon-list"> Todas
                     </button>
                     <button class="btn btn-default" ng-click="notificacoes()">
-                        <span class="badge glyphicon glyphicon-bell"> {{ qtdeNotificacoes }}</span>
+                      <span class="badge glyphicon glyphicon-ok">   {{ qtdeNotificacoes }}</span>
                     </button>
                   </span>
               </div>
             </div>
 
             <div class="col-lg-12"> <!-- tarefas -->
-              <h3>Minhas tarefas</h3>
-              <div class="thumbnail col-lg-12" ng-repeat="t in tarefas">
+              <h3>Minhas tarefas {{txtConcluidas}}</h3>
+              <div class="thumbnail col-lg-10" ng-repeat="t in tarefas">
                   <div class="col-lg-8">
                       <h4>{{ t.titulo }}</h4>
                   </div>
                   <div class="col-lg-4">
-                    <span class="glyphicon glyphicon-time" id="idPrazo">{{ t.prazo }}</span>
+                    <span class="glyphicon glyphicon-time" id="idPrazo">Prazo: {{ t.prazo | date: 'dd/MM/yyyy' }}</span>
                     <p>{{expirado}}</p>
                   </div>
                   <div class="col-lg-8">
                     <p>{{ t.descricao }}</p>
                     <p>Prioridade: {{t.prioridade}} </p>
-                    <p>Concluido: {{t.concluido}} </p>
                   </div>
                   <div class="col-lg-4">
                     <a href="#" class="label label-success" role="button" ng-click="concluirTarefa(t.concluido)">Concluir</a> 
                     <!-- Button trigger modal -->
-                    <button type="button" class="label label-warning" ng-click="editarTarefa(t._id,t.titulo,t.prazo,t.descricao,t.prioridade)" data-toggle="modal" data-target="#myModal">
-                      Editar
-                    </button>
-                    <!-- Modal -->
+                    <a href="#" class="label label-warning" data-toggle="modal" ng-click="editarTarefa(t._id, t.titulo, t.descricao, t.prazo, t.prioridade)" data-target="#myModal">Editar</a>
+                    <!-- MODAL -->
                     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                       <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -113,21 +99,21 @@
                               <p ng-show="erro" class="alert alert-danger">{{erro}}</p> <!-- mensagem de alerta -->
                               <p ng-show="sucesso" class="alert alert-success">{{sucesso}}</p> <!-- mensagem de alerta -->                              
 
-                              <form ng-submit="atualizarTarefa()">
+                              <form>
                                   <div class="form-group col-lg-8">
-                                      Titulo:<input class="form-control" ng-model="cTitulo"/>
+                                      Titulo:<input class="form-control" ng-model="titulof"/>
+                                  </div>
+                                  <div class="form-group col-lg-4">
+                                      Prazo:<input class="form-control" type="date" ng-model="prazof">
+                                  </div>
+                                  <div class="form-group col-lg-8">
+                                      Descrição:<textarea class="form-control" ng-model="descricaof" name="descricaof" rows="8"></textarea>
                                   </div>
                                   <div class="form-group col-lg-2">
-                                      Prazo:<input class="form-control" type="date" ng-model="cPrazo">
-                                  </div>
-                                  <div class="form-group col-lg-8">
-                                      Descrição:<textarea class="form-control" ng-model="cDescricao" name="cDescricao" rows="8"></textarea>
-                                  </div>
-                                  <div class="form-group col-lg-1">
-                                      Prioridade:<input class="form-control" type="number" min="1" max="5" ng-model="cPrioridade" name="cPrioridade">
+                                      Prioridade:<input class="form-control" type="number" min="1" max="5" ng-model="prioridadef" name="prioridadef">
                                   </div>
                                   <div class="form-group col-lg-12">
-                                      <input class="btn btn-info" type="submit" value="Atualizar"/>
+                                      <button class="btn btn-info" ng-click="atualizarTarefa(t._id, titulof, prazof, descricaof, prioridadef)">Atualizar</button>
                                       <input class="btn btn-default" type="reset" value="Limpar"/>
                                   </div>
                               </form>
@@ -139,7 +125,6 @@
                       </div>
                     </div>
                     <!-- FIM MODAL -->
-
                     <a href="#" class="label label-danger" ng-click="remove(t._id)" role="button">Excluir</a>
                   </div>
               </div>
