--- a/TaskClient/inicio.html
+++ b/TaskClient/inicio.html
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#">Task Manager</a>
+              <a class="navbar-brand" href="inicio.html">Task Manager</a>
             </div>
           </div>
         </nav>
@@ -81,6 +81,7 @@
                   <div class="col-lg-8">
                     <p>{{ t.descricao }}</p>
                     <p>Prioridade: {{t.prioridade}} </p>
+                    <span ng-hide="true">{{idArmazena}}</span>
                   </div>
                   <div class="col-lg-4">
                       <div class="btn-group-xs" role="group" aria-label="...">
